// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardCollectionSection component Card label doesn't render button if cardLabel and link label are not provided 1`] = `
<div>
  <div
    class="CardCollectionSection"
  >
    <div
      class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
    >
      <div
        class="Container-module_Container__4e9IW"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h2
            class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            test title
          </h2>
          <div
            class="RichText"
          >
            <p
              class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
            >
              test rich text
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
            >
              <button
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":null,\\"action\\":\\"visualiser\\"}"
                tabindex="0"
                type="button"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h4
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                  >
                    test
                  </h4>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  />
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  />
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-341 MuiButton-contained buttonStyles-contained-343 link MuiButton-containedPrimary"
            data-gtm="{\\"id\\":\\"cta-visualiser1\\",\\"action\\":\\"visualiser\\",\\"label\\":\\"Visualiser\\"}"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-344"
            >
              Visualiser
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardCollectionSection component Renders correctly When Title rich text and cards are present 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <p
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
              >
                test rich text
              </p>
            </div>
            <div
              class="Carousel-module_wrapper__PjLbh Carousel-module_wrapper--with-gutter__GKGGX"
            >
              <div
                class="Carousel-module_Carousel__XzW0N Carousel-module_Carousel--opacity__zIODA Carousel-module_Carousel--with-gutter__CJq3m"
                data-testid="carousel"
              >
                <div
                  style="overflow-x: hidden;"
                >
                  <div
                    class="react-swipeable-view-container"
                    style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                  >
                    <div
                      aria-hidden="false"
                      class="Carousel__slide--global"
                      data-swipeable="true"
                      style="width: 100%; flex-shrink: 0; overflow: auto;"
                    >
                      <div
                        class="Carousel-module_page__zUQNj"
                      >
                        <div
                          class="Carousel-module_slide__7h-hP"
                          style="width: 33.333333333333336%;"
                        >
                          <a
                            aria-disabled="false"
                            class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                            data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                            href="/en"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="OverviewCard-module_body__ECyj2"
                            >
                              <h4
                                class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                              >
                                test
                              </h4>
                              <div
                                class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                              />
                              <div
                                class="OverviewCard-module_footer__MMw-Y"
                              >
                                <h6
                                  class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                                >
                                  1 June 2021
                                </h6>
                                <span
                                  aria-disabled="false"
                                  class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary"
                                  data-testid="card-link"
                                  role="button"
                                  tabindex="0"
                                >
                                  <span
                                    class="MuiButton-label buttonStyles-label-4"
                                  >
                                    a string
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </span>
                              </div>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When entry-hyperlink is present 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              test rich text
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-124"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When heading 2 is present 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <h2
                class="MuiTypography-root title Typography-module_Typography__aA2Zb MuiTypography-h2"
              >
                test rich text
              </h2>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-24"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When heading 3 is present 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <h3
                class="MuiTypography-root title Typography-module_Typography__aA2Zb MuiTypography-h3"
              >
                test rich text
              </h3>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-44"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When heading 4 is present 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <h4
                class="MuiTypography-root title Typography-module_Typography__aA2Zb MuiTypography-h4"
              >
                test rich text
              </h4>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-64"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When heading 5 is present 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <h5
                class="MuiTypography-root title Typography-module_Typography__aA2Zb MuiTypography-h5"
              >
                test rich text
              </h5>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-84"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When heading 6 is present 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <h6
                class="MuiTypography-root title Typography-module_Typography__aA2Zb MuiTypography-h6"
              >
                test rich text
              </h6>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-101 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-104"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When text length = 0 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <p
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
              >
                
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-141 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-144"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Renders correctly When when dialogContent link is provided 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <div
              class="RichText"
            >
              <p
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1 MuiTypography-gutterBottom"
              >
                test rich text
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/en\\"}"
                  href="/en"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1 June 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-161 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-164"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-161 MuiButton-contained buttonStyles-contained-163 link MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}"
              href="https://www.external.co.uk"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              <span
                class="MuiButton-label buttonStyles-label-164"
              >
                string
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Sorts correctly By default 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <h3
              class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h4"
            >
              MC: cardCollection.groupTitle
            </h3>
            <div
              class="group-chips"
            >
              <div
                class="chips"
              >
                <div
                  class="MuiButtonBase-root MuiChip-root Chip-module_Chip__-CMbK Chip-module_Chip--default__RMwmT Chip-module_Chip--theme-white__HdsO- MuiChip-clickable"
                  data-gtm="{\\"id\\":\\"selector-cards1\\",\\"label\\":\\"Mushrooms\\",\\"action\\":\\"Selector – Cards Filter\\"}"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Mushrooms
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiChip-root Chip-module_Chip__-CMbK Chip-module_Chip--default__RMwmT Chip-module_Chip--theme-white__HdsO- MuiChip-clickable"
                  data-gtm="{\\"id\\":\\"selector-cards1\\",\\"label\\":\\"Badgers\\",\\"action\\":\\"Selector – Cards Filter\\"}"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Badgers
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-all AnchorLink-module_Anchorlink__OMERU AnchorLink-module_Anchorlink--disabled__YqlDg MuiTypography-colorPrimary"
                type="button"
              >
                <span>
                  MC: global.clearAll
                </span>
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <div
                  class="OverviewCard-module_OverviewCard__eOihI"
                  type="button"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      Villain 1
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-481 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-484"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test 2
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        2. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-481 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-484"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test 3
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        3. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-481 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-484"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Sorts correctly By newest date first 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <h3
              class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h4"
            >
              MC: cardCollection.groupTitle
            </h3>
            <div
              class="group-chips"
            >
              <div
                class="chips"
              >
                <div
                  class="MuiButtonBase-root MuiChip-root Chip-module_Chip__-CMbK Chip-module_Chip--default__RMwmT Chip-module_Chip--theme-white__HdsO- MuiChip-clickable"
                  data-gtm="{\\"id\\":\\"selector-cards1\\",\\"label\\":\\"Mushrooms\\",\\"action\\":\\"Selector – Cards Filter\\"}"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Mushrooms
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiChip-root Chip-module_Chip__-CMbK Chip-module_Chip--default__RMwmT Chip-module_Chip--theme-white__HdsO- MuiChip-clickable"
                  data-gtm="{\\"id\\":\\"selector-cards1\\",\\"label\\":\\"Badgers\\",\\"action\\":\\"Selector – Cards Filter\\"}"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Badgers
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-all AnchorLink-module_Anchorlink__OMERU AnchorLink-module_Anchorlink--disabled__YqlDg MuiTypography-colorPrimary"
                type="button"
              >
                <span>
                  MC: global.clearAll
                </span>
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test 3
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        3. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-501 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-504"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test 2
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        2. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-501 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-504"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-501 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-504"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <div
                  class="OverviewCard-module_OverviewCard__eOihI"
                  type="button"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      Villain 1
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CardCollectionSection component Sorts correctly By oldest date first 1`] = `
<body>
  <div>
    <div
      class="CardCollectionSection"
    >
      <div
        class="Section-module_Section__yrYL2 Section-module_Section--pearl__-3VEX"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h2
              class="MuiTypography-root title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
            >
              test title
            </h2>
            <h3
              class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h4"
            >
              MC: cardCollection.groupTitle
            </h3>
            <div
              class="group-chips"
            >
              <div
                class="chips"
              >
                <div
                  class="MuiButtonBase-root MuiChip-root Chip-module_Chip__-CMbK Chip-module_Chip--default__RMwmT Chip-module_Chip--theme-white__HdsO- MuiChip-clickable"
                  data-gtm="{\\"id\\":\\"selector-cards1\\",\\"label\\":\\"Mushrooms\\",\\"action\\":\\"Selector – Cards Filter\\"}"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Mushrooms
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiChip-root Chip-module_Chip__-CMbK Chip-module_Chip--default__RMwmT Chip-module_Chip--theme-white__HdsO- MuiChip-clickable"
                  data-gtm="{\\"id\\":\\"selector-cards1\\",\\"label\\":\\"Badgers\\",\\"action\\":\\"Selector – Cards Filter\\"}"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Badgers
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-all AnchorLink-module_Anchorlink__OMERU AnchorLink-module_Anchorlink--disabled__YqlDg MuiTypography-colorPrimary"
                type="button"
              >
                <span>
                  MC: global.clearAll
                </span>
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        1. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-521 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-524"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test 2
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        2. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-521 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-524"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <a
                  aria-disabled="false"
                  class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                  data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"a string\\",\\"action\\":\\"/no\\"}"
                  href="/no"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      test 3
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    >
                      <h6
                        class="MuiTypography-root date Typography-module_Typography__aA2Zb MuiTypography-h6"
                      >
                        3. juni 2021
                      </h6>
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiButton-root buttonStyles-root-521 MuiButton-outlined MuiButton-outlinedPrimary"
                        data-testid="card-link"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiButton-label buttonStyles-label-524"
                        >
                          a string
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-4 MuiGrid-grid-xl-3"
              >
                <div
                  class="OverviewCard-module_OverviewCard__eOihI"
                  type="button"
                >
                  <div
                    class="OverviewCard-module_body__ECyj2"
                  >
                    <h4
                      class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h4"
                    >
                      Villain 1
                    </h4>
                    <div
                      class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                    />
                    <div
                      class="OverviewCard-module_footer__MMw-Y"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
